[tool.poetry]
name = "redis_test"
version = "0.1.0"
description = ""
authors = ["nikolay <cherrykolya@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
redis = "^4.3.3"
aioredis = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
